erDiagram
    PROFILES ||--o{ CART_ITEMS : "มีสินค้าในตะกร้า"
    PROFILES ||--o{ ORDERS : "สั่งซื้อ"
    PROFILES ||--o{ REVIEWS : "เขียนรีวิว"
    PROFILES ||--o{ ADDRESSES : "มีที่อยู่ (planned)"

    CATEGORIES ||--o{ CATEGORIES : "หมวดหมู่ย่อย"
    CATEGORIES ||--o{ PRODUCTS : "มีสินค้า"

    PRODUCTS ||--o{ PRODUCT_VARIANTS : "มีตัวเลือก"
    PRODUCTS ||--o{ CART_ITEMS : "ถูกใส่ตะกร้า"
    PRODUCTS ||--o{ ORDER_ITEMS : "ถูกสั่งซื้อ"
    PRODUCTS ||--o{ REVIEWS : "ถูกรีวิว"
    PRODUCTS ||--o{ PROMOTION_PRODUCTS : "อยู่ในโปรโมชัน"

    ORDERS ||--o{ ORDER_ITEMS : "ประกอบด้วย"
    ORDERS ||--|| PAYMENTS : "ชำระเงิน (planned)"
    PRODUCT_VARIANTS ||--o{ ORDER_ITEMS : "ระบุตัวเลือก"
    PROMOTIONS ||--o{ PROMOTION_PRODUCTS : "ครอบคลุมสินค้า"

    PROFILES {
        uuid id PK "FK auth.users"
        text email
        text full_name
        text phone
        text avatar_url
        text role "customer | employee | admin (+super_admin planned)"
        timestamptz created_at
    }
    CATEGORIES {
        uuid id PK
        text name
        text slug UK
        text route_path UK
        uuid parent_id FK "หมวดหมู่แม่"
        int level
        int sort_order
        bool is_active
    }
    PRODUCTS {
        uuid id PK
        text name
        text slug UK
        text sku UK
        numeric price
        numeric original_price
        text brand
        uuid category_id FK
        jsonb images
        jsonb tags
        int stock
        bool is_active
        bool is_featured
    }
    PRODUCT_VARIANTS {
        uuid id PK
        uuid product_id FK
        text sku UK
        numeric price_override
        int stock
        bool is_active
    }
    CART_ITEMS {
        uuid id PK
        uuid user_id FK
        uuid product_id FK
        int quantity
        text size
        text color
    }
    ORDERS {
        uuid id PK
        uuid user_id FK
        text status "pending|paid|shipped|delivered|cancelled"
        numeric total
        timestamptz created_at
    }
    ORDER_ITEMS {
        uuid id PK
        uuid order_id FK
        uuid product_id FK
        uuid variant_id FK
        int quantity
        numeric price
    }
    REVIEWS {
        uuid id PK
        uuid user_id FK
        uuid product_id FK
        int rating "1-5"
        text title
        text comment
        bool is_verified
    }
    PROMOTIONS {
        uuid id PK
        text name
        text type
        numeric value
        timestamptz start_at
        timestamptz end_at
    }
    PROMOTION_PRODUCTS {
        uuid id PK
        uuid promotion_id FK
        uuid product_id FK
    }
    ADDRESSES {
        uuid id PK "PLANNED - ยังไม่ได้สร้างตาราง"
        uuid user_id FK
        text full_name
        text phone
        text province
        text amphoe
        text district
        text postal_code
        text address
        bool is_default
    }
    PAYMENTS {
        uuid id PK "PLANNED - ยังไม่ได้สร้างตาราง"
        uuid order_id FK
        text method "promptpay|credit|bank"
        numeric amount
        numeric ref_amount
        text status "pending|confirmed|expired"
        text promptpay_number
        timestamptz expires_at
    }
